# cim

./: .dockerignore  .gitattributes  ARCHITECTURE.md  Cargo.toml  INTEGRATION_CPP.md  build.rs
.github/workflows/: build.yml
build_utils/: Dockerfile  README.md  build.sh
ci/: build-linux-glibc228.sh
cpp/: CMakeLists.txt  details_enhanced.cpp  imageproc.cpp  imageproc.h  lut_alpha.cpp
src/: app.rs  cli.rs  debug.rs  decoder.rs  export.rs  imageproc.rs  main.rs  media.rs  offsets.rs  palette.rs  renderer.rs  settings.rs  testutil.rs  view.rs
src/app/: canvas.rs  compute.rs  decode.rs  export_ui.rs  input.rs  lifecycle.rs  mod.rs  panels.rs  profile.rs  util.rs  watch.rs
src/app/canvas/: ab.rs  chrome.rs  compute_ui.rs  line_profile.rs  mod.rs  options_popup.rs  region_stats.rs  transform.rs
src/media/: fastscan.rs  loader.rs  mod.rs  percentile.rs  render.rs  source.rs  stats.rs  video.rs
