[package]
name = "cim"
version = "0.1.0"
edition = "2021"
description = "Compare Images & Sequences — lossless side-by-side viewer for images and sequences"

[dependencies]
eframe = { version = "0.29", default-features = true }
image = "0.25"
tiff = "0.9"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"

# A fast, non-optimized-but-usable dev build; bump images decode speed a bit.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
