[package]
name = "cim"
version = "1.3.0"
edition = "2021"
description = "Compare Images & Sequences — lossless side-by-side viewer for images and sequences"

[dependencies]
eframe = { version = "0.29", default-features = true }
# Already in the tree via winit; used to reach the Win32 HWND for the
# startup DWM cloak (no white flash — see app/mod.rs::set_window_cloak).
raw-window-handle = "0.6"
image = "0.25"
tiff = "0.11"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
# Runtime loading of the optional proprietary image-processing library
# (a .so/.dll built separately from cpp/, loaded on demand — see src/imageproc.rs).
libloading = "0.8"

# Embed the Windows .exe icon at build time (see build.rs). `image` decodes/resizes
# the PNG(s) in assets/, `ico` assembles the multi-size .ico, and `winresource`
# invokes the Windows SDK resource compiler. All Windows-only build-time deps.
[target.'cfg(windows)'.build-dependencies]
image = "0.25"
ico = "0.3"
winresource = "0.1"

# A fast, non-optimized-but-usable dev build; bump images decode speed a bit.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
